{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 1426,
  "lineage": "33ac96c2-4c93-bf94-c1c0-fa5b9b5620ce",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339712838104:loadbalancer/app/microservices-alb/7c314e51e3ce3c6b",
            "arn_suffix": "app/microservices-alb/7c314e51e3ce3c6b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "microservices-alb-2112802225.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:339712838104:loadbalancer/app/microservices-alb/7c314e51e3ce3c6b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "microservices-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-050f3dfe483f3297c",
              "sg-0af6da3da53f0dbe1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06ecdafd1b1f7a75d"
              },
              {
                "subnet_id": "subnet-0ac7bd94e328708a8"
              }
            ],
            "subnets": [
              "subnet-06ecdafd1b1f7a75d",
              "subnet-0ac7bd94e328708a8"
            ],
            "tags": {
              "name": "aws-ecs-nginx-lb",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "name": "aws-ecs-nginx-lb",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-021db5b72276d098e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb-secgroup.aws_security_group.this",
            "module.alb-secgroup.aws_security_group.this_name_prefix",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "my-http-listener",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339712838104:listener/app/microservices-alb/7c314e51e3ce3c6b/6a877f002ffa4451",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Fixed Static message - for Root Context",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:339712838104:listener/app/microservices-alb/7c314e51e3ce3c6b/6a877f002ffa4451",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:339712838104:loadbalancer/app/microservices-alb/7c314e51e3ce3c6b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "name": "aws-ecs-nginx-lb",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "name": "aws-ecs-nginx-lb",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb-secgroup.aws_security_group.this",
            "module.alb-secgroup.aws_security_group.this_name_prefix",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "my-http-listener/home-rule",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 3600,
                        "enabled": true
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:339712838104:targetgroup/home-2024060612045764320000000a/207adba5bf5a8227",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339712838104:listener-rule/app/microservices-alb/7c314e51e3ce3c6b/6a877f002ffa4451/296298c546e57e37",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/home*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:339712838104:listener-rule/app/microservices-alb/7c314e51e3ce3c6b/6a877f002ffa4451/296298c546e57e37",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:339712838104:listener/app/microservices-alb/7c314e51e3ce3c6b/6a877f002ffa4451",
            "priority": 1,
            "tags": {
              "name": "aws-ecs-nginx-lb",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "name": "aws-ecs-nginx-lb",
              "terraform-aws-modules": "alb"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb-secgroup.aws_security_group.this",
            "module.alb-secgroup.aws_security_group.this_name_prefix",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "home",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339712838104:targetgroup/home-2024060612045764320000000a/207adba5bf5a8227",
            "arn_suffix": "targetgroup/home-2024060612045764320000000a/207adba5bf5a8227",
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:339712838104:targetgroup/home-2024060612045764320000000a/207adba5bf5a8227",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "false",
            "name": "home-2024060612045764320000000a",
            "name_prefix": "home-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "target group for alb",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "name": "target group for alb",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-021db5b72276d098e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:security-group/sg-050f3dfe483f3297c",
            "description": "Security group for microservices-alb application load balancer",
            "egress": [],
            "id": "sg-050f3dfe483f3297c",
            "ingress": [],
            "name": "microservices-alb-20240606120457555200000009",
            "name_prefix": "microservices-alb-",
            "owner_id": "339712838104",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "aws-ecs-nginx-lb",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "name": "aws-ecs-nginx-lb",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-021db5b72276d098e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb-secgroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:security-group/sg-0af6da3da53f0dbe1",
            "description": "Security group which is used as an argument in complete-sg",
            "egress": [],
            "id": "sg-0af6da3da53f0dbe1",
            "ingress": [],
            "name": "alb-sg-2024060612045809330000000c",
            "name_prefix": "alb-sg-",
            "owner_id": "339712838104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg",
              "name": "ALB Security Group"
            },
            "tags_all": {
              "Name": "alb-sg",
              "name": "ALB Security Group"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-021db5b72276d098e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb-secgroup",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3293996793",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0af6da3da53f0dbe1",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb-secgroup.aws_security_group.this",
            "module.alb-secgroup.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb-secgroup",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2005401364",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0af6da3da53f0dbe1",
            "security_group_rule_id": "sgr-0e33f14d3ea30e7e7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb-secgroup.aws_security_group.this",
            "module.alb-secgroup.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bookingapp-home-sec",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:security-group/sg-0fa69c3be7a621211",
            "description": "Security group which is used as an argument in complete-sg",
            "egress": [],
            "id": "sg-0fa69c3be7a621211",
            "ingress": [],
            "name": "bookingapp-home-2024060612045861710000000d",
            "name_prefix": "bookingapp-home-",
            "owner_id": "339712838104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bookingapp-home",
              "name": "Bookingapp-home Security Group"
            },
            "tags_all": {
              "Name": "bookingapp-home",
              "name": "Bookingapp-home Security Group"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-021db5b72276d098e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bookingapp-home-sec",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1458291151",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fa69c3be7a621211",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bookingapp-home-sec.aws_security_group.this",
            "module.bookingapp-home-sec.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bookingapp-home-sec",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allow alb",
            "from_port": 5000,
            "id": "sgrule-1102579969",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fa69c3be7a621211",
            "security_group_rule_id": "sgr-0e3d179cc2b708eca",
            "self": false,
            "source_security_group_id": "sg-0af6da3da53f0dbe1",
            "timeouts": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb-secgroup.aws_security_group.this",
            "module.alb-secgroup.aws_security_group.this_name_prefix",
            "module.bookingapp-home-sec.aws_security_group.this",
            "module.bookingapp-home-sec.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bookingapp-movie-sec",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:security-group/sg-078eadd554bad4147",
            "description": "Security group which is used as an argument in complete-sg",
            "egress": [],
            "id": "sg-078eadd554bad4147",
            "ingress": [],
            "name": "bookingapp-home-2024060612045808880000000b",
            "name_prefix": "bookingapp-home-",
            "owner_id": "339712838104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bookingapp-home",
              "name": "Bookingapp-home Security Group"
            },
            "tags_all": {
              "Name": "bookingapp-home",
              "name": "Bookingapp-home Security Group"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-021db5b72276d098e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bookingapp-movie-sec",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-486053625",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-078eadd554bad4147",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bookingapp-movie-sec.aws_security_group.this",
            "module.bookingapp-movie-sec.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bookingapp-movie-sec",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allow alb",
            "from_port": 5000,
            "id": "sgrule-3050471609",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-078eadd554bad4147",
            "security_group_rule_id": "sgr-00549cf13cecb20fe",
            "self": false,
            "source_security_group_id": "sg-0fa69c3be7a621211",
            "timeouts": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bookingapp-home-sec.aws_security_group.this",
            "module.bookingapp-home-sec.aws_security_group.this_name_prefix",
            "module.bookingapp-movie-sec.aws_security_group.this",
            "module.bookingapp-movie-sec.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bookingapp-redis-sec",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:security-group/sg-04cff2552f6766171",
            "description": "Security group which is used as an argument in complete-sg",
            "egress": [],
            "id": "sg-04cff2552f6766171",
            "ingress": [],
            "name": "ns-sg-2024060612045875140000000e",
            "name_prefix": "ns-sg-",
            "owner_id": "339712838104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ns-sg",
              "name": "notification Security Group"
            },
            "tags_all": {
              "Name": "ns-sg",
              "name": "notification Security Group"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-021db5b72276d098e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bookingapp-redis-sec",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-230862710",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04cff2552f6766171",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bookingapp-redis-sec.aws_security_group.this",
            "module.bookingapp-redis-sec.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bookingapp-redis-sec",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "allow usm for service discovery",
            "from_port": 6379,
            "id": "sgrule-1054865710",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04cff2552f6766171",
            "security_group_rule_id": "sgr-0618b16b8dbea913d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bookingapp-redis-sec.aws_security_group.this",
            "module.bookingapp-redis-sec.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:network-acl/acl-090ced344a398329f",
            "default_network_acl_id": "acl-090ced344a398329f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-090ced344a398329f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "339712838104",
            "subnet_ids": [
              "subnet-03508af5e613f6e90",
              "subnet-05e856183bcf990a2",
              "subnet-06ecdafd1b1f7a75d",
              "subnet-0ac7bd94e328708a8"
            ],
            "tags": {
              "Name": "VPC-ECS-default"
            },
            "tags_all": {
              "Name": "VPC-ECS-default"
            },
            "vpc_id": "vpc-021db5b72276d098e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:route-table/rtb-00acd284b2105136e",
            "default_route_table_id": "rtb-00acd284b2105136e",
            "id": "rtb-00acd284b2105136e",
            "owner_id": "339712838104",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "VPC-ECS-default"
            },
            "tags_all": {
              "Name": "VPC-ECS-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-021db5b72276d098e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:security-group/sg-03048c8d77b72f1f4",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03048c8d77b72f1f4",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "339712838104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC-ECS-default"
            },
            "tags_all": {
              "Name": "VPC-ECS-default"
            },
            "vpc_id": "vpc-021db5b72276d098e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a551eb59380e4df",
            "arn": "arn:aws:ec2:us-east-1:339712838104:elastic-ip/eipalloc-04a551eb59380e4df",
            "domain": "vpc",
            "id": "eipalloc-04a551eb59380e4df",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-222-4-199.compute-1.amazonaws.com",
            "public_ip": "44.222.4.199",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "VPC-ECS-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC-ECS-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2095a2cd591a168",
            "arn": "arn:aws:ec2:us-east-1:339712838104:elastic-ip/eipalloc-0b2095a2cd591a168",
            "domain": "vpc",
            "id": "eipalloc-0b2095a2cd591a168",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-198-126-88.compute-1.amazonaws.com",
            "public_ip": "54.198.126.88",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "VPC-ECS-us-east-1b"
            },
            "tags_all": {
              "Name": "VPC-ECS-us-east-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:internet-gateway/igw-07fe9375cf6b80757",
            "id": "igw-07fe9375cf6b80757",
            "owner_id": "339712838104",
            "tags": {
              "Name": "VPC-ECS"
            },
            "tags_all": {
              "Name": "VPC-ECS"
            },
            "vpc_id": "vpc-021db5b72276d098e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a551eb59380e4df",
            "association_id": "eipassoc-01d0e500198eb1800",
            "connectivity_type": "public",
            "id": "nat-003f083c36835f278",
            "network_interface_id": "eni-0debdabd19ea786f8",
            "private_ip": "10.0.101.89",
            "public_ip": "44.222.4.199",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ac7bd94e328708a8",
            "tags": {
              "Name": "VPC-ECS-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC-ECS-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2095a2cd591a168",
            "association_id": "eipassoc-0d01794aed2dd57c0",
            "connectivity_type": "public",
            "id": "nat-0611a2fe344e1cf54",
            "network_interface_id": "eni-0939e21b350097623",
            "private_ip": "10.0.102.224",
            "public_ip": "54.198.126.88",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06ecdafd1b1f7a75d",
            "tags": {
              "Name": "VPC-ECS-us-east-1b"
            },
            "tags_all": {
              "Name": "VPC-ECS-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0984949fda6d555681080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-003f083c36835f278",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0984949fda6d55568",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0efa4c1093425bf731080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0611a2fe344e1cf54",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0efa4c1093425bf73",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07fe9375cf6b80757",
            "id": "r-rtb-0ecff67f122f785281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ecff67f122f78528",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:route-table/rtb-0984949fda6d55568",
            "id": "rtb-0984949fda6d55568",
            "owner_id": "339712838104",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC-ECS-private-us-east-1a"
            },
            "tags_all": {
              "Name": "VPC-ECS-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-021db5b72276d098e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:route-table/rtb-0efa4c1093425bf73",
            "id": "rtb-0efa4c1093425bf73",
            "owner_id": "339712838104",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC-ECS-private-us-east-1b"
            },
            "tags_all": {
              "Name": "VPC-ECS-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-021db5b72276d098e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:route-table/rtb-0ecff67f122f78528",
            "id": "rtb-0ecff67f122f78528",
            "owner_id": "339712838104",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC-ECS-public"
            },
            "tags_all": {
              "Name": "VPC-ECS-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-021db5b72276d098e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f56b446a4c35b150",
            "route_table_id": "rtb-0984949fda6d55568",
            "subnet_id": "subnet-05e856183bcf990a2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096a4ccdfe1089b4a",
            "route_table_id": "rtb-0efa4c1093425bf73",
            "subnet_id": "subnet-03508af5e613f6e90"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050b5b8c23149e3a8",
            "route_table_id": "rtb-0ecff67f122f78528",
            "subnet_id": "subnet-0ac7bd94e328708a8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016f5a37135a28d8c",
            "route_table_id": "rtb-0ecff67f122f78528",
            "subnet_id": "subnet-06ecdafd1b1f7a75d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:subnet/subnet-05e856183bcf990a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e856183bcf990a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712838104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-ECS-private-us-east-1a",
              "Type": "Private Subnets"
            },
            "tags_all": {
              "Name": "VPC-ECS-private-us-east-1a",
              "Type": "Private Subnets"
            },
            "vpc_id": "vpc-021db5b72276d098e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:subnet/subnet-03508af5e613f6e90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03508af5e613f6e90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712838104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-ECS-private-us-east-1b",
              "Type": "Private Subnets"
            },
            "tags_all": {
              "Name": "VPC-ECS-private-us-east-1b",
              "Type": "Private Subnets"
            },
            "vpc_id": "vpc-021db5b72276d098e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:subnet/subnet-0ac7bd94e328708a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac7bd94e328708a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712838104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-ECS-public-us-east-1a",
              "Type": "Public Subnets"
            },
            "tags_all": {
              "Name": "VPC-ECS-public-us-east-1a",
              "Type": "Public Subnets"
            },
            "vpc_id": "vpc-021db5b72276d098e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:subnet/subnet-06ecdafd1b1f7a75d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ecdafd1b1f7a75d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712838104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-ECS-public-us-east-1b",
              "Type": "Public Subnets"
            },
            "tags_all": {
              "Name": "VPC-ECS-public-us-east-1b",
              "Type": "Public Subnets"
            },
            "vpc_id": "vpc-021db5b72276d098e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712838104:vpc/vpc-021db5b72276d098e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-090ced344a398329f",
            "default_route_table_id": "rtb-00acd284b2105136e",
            "default_security_group_id": "sg-03048c8d77b72f1f4",
            "dhcp_options_id": "dopt-08a726ac35ffadb43",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-021db5b72276d098e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00acd284b2105136e",
            "owner_id": "339712838104",
            "tags": {
              "Name": "VPC-ECS"
            },
            "tags_all": {
              "Name": "VPC-ECS"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}